# find-dead-links

./: .gitignore  .pre-commit-config.yaml  Licence.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: lint_and_test.yml
find_dead_links/: __init__.py  analyse_links_from_files.py  check_url.py  placeholder.py  search_links_in_file.py
find_dead_links/scrapping/: __init__.py  settings.py
find_dead_links/scrapping/spiders/: __init__.py  complex_website_links.py
tests/: __init__.py  test_analyse_links_from_files.py  test_check_url.py  test_plaholder.py  test_search_links_in_file.py
